# empathy-prisonner-dilemma

./: .gitignore  README.md  ROADMAP_FIGURE3_LEARNING.md  environment.yml  pyproject.toml
analysis/: README.md  __init__.py  comparison.py  discovery.py  io.py  metrics.py  regimes.py  reports.py  social.py
analysis/tests/: __init__.py  test_analysis_discovery.py
analysis/visuals/: README.md  __init__.py  plotting.py
docs/: IMPLEMENTATION_PLAN.md  ROADMAP.md
notebooks/graph_navigation/: belief_share.ipynb  emotions.ipynb  forage_agent.ipynb  planning.ipynb  predator_agent.ipynb  scavenge_agent.ipynb  search_agent.ipynb  tom_plan.ipynb
notebooks/prisoners_dilemma/: test_sweeps.ipynb
scripts/: analyze_sweep.py  create_config.py  generate_empathy_inference_figure.py  generate_learning_figure.py  generate_near_symmetric_figure.py  generate_sophisticated_figure.py  generate_timeseries_figures.py  parameter_combination_analysis.py  run_analysis.py  run_experiment.py  run_pd_experiments.py  run_tests.py  validate_configs.py
src/empathy/: __init__.py
src/empathy/clean_up/: __init__.py
src/empathy/clean_up/agent/: __init__.py  agent.py  beliefs.py
src/empathy/clean_up/configs/: baseline_vs_social.json  killer_test.json  mega_sweep.json  phase_diagram.json  phase_diagram_baseline.json  quick_test.json  smoke.json  test_self_learning.json
src/empathy/clean_up/environment/: __init__.py  base.py  environment.py
src/empathy/clean_up/experiment/: README.md  __init__.py  cli.py  config.py  constants.py  logger.py  metrics.py  runner.py
src/empathy/core/: __init__.py  math.py
src/empathy/graph_navigation/: __init__.py  envs.py  experiment.py  util.py  visualize.py
src/empathy/graph_navigation/agents/: __init__.py  base.py  emotional.py  empathic.py  forager.py  scavenger.py  searcher.py  (+1 more)
src/empathy/prisoners_dilemma/: __init__.py  agent.py  config.py  env.py  sim.py  sweep.py  utils.py
tests/: test_contracts.py  test_dirichlet_beliefs.py  test_exploitability.py  test_full_simulation.py  test_integration.py  test_sophisticated.py  test_tom.py
(+24 files in other folders)
